# ESP32_NAT_router_secure_broker_client

./: CMakeLists.txt  README.md  partitions_example.csv  platformio.ini  sdkconfig  sdkconfig.esp32dev  sdkconfig.esp32dev.old
components/arduino/libraries/WiFi/src/: WiFiServer.cpp  WiFiServer.h
components/arduino/libraries/WiFiClientSecure/src/: ssl_client.cpp  ssl_client.cpp.bak
lib/esp32_https_server/: .piopm
lib/esp32_https_server/src/: WebsocketHandler.cpp
main/: CMakeLists.txt  HTTPConnection.hpp  HTTPSServer2.cpp  HTTPSServer2.hpp  TinyMqtt.cpp  TinyMqtt.h  esp32_nat_router.c  http_server.c  main.cpp  pages.h
