idf_component_register(SRCS "main.cpp"
                            "esp32_nat_router.c"
                            "http_server.c"
                            "TinyMqtt.cpp"
                            "StringIndexer.cpp"
                            "HTTPSServer2.cpp"
                    INCLUDE_DIRS ".")
